--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "email-verification": "^0.4.6",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
+    "express-validator": "^5.3.0",
     "mongodb": "^3.1.6",
-    "mongoose": "^5.3.0"
+    "mongoose": "^5.3.0",
+    "nodemailer": "^4.6.8"
   }
 }
